--- a/designservice.html
+++ b/designservice.html
@@ -9,6 +9,8 @@
             <link rel="stylesheet" href="CSS/main.css">
             <link rel="stylesheet" href="CSS/banner.css">
             <link rel="stylesheet" href="CSS/service.css">
+            <link rel="stylesheet" href="CSS/ourwork.css">
+            <link rel="stylesheet" href="CSS/container.css">
             <link rel="stylesheet" href="CSS/standing.css">
             <link rel="stylesheet" href="CSS/crafting.css">
             <link rel="stylesheet" href="CSS/ideas.css">
@@ -149,22 +151,6 @@
                         <img src="https://www.specbee.com/sites/default/files/styles/promo_card_xl/public/2023-06/higher-education-crafting-smart-solutions.webp?itok=AXJQemx7" alt="">
                     </div>
                 </div>
-
-                <div class="crafting__item">
-                    <div class="crafting__content">
-                        <div class="crafting__content__title">
-                            <h3>WE'VE GOT YOUR BACK</h3>
-                        </div>
-                        <div class="crafting__content__text">
-                            <p>Our Drupal experts can help you manage your university's web presence and implement a content strategy that is compliant with campus-wide standards. With Specbee as your Drupal partner, you’ll have an expert team to help you improve engagement with students, faculty, alumni, and prospective students.</p>
-                            <p>All our major deployments are driven by robust and automated Continuous Integration and Continuous Delivery practices, which allow for fully controlled, secure and precise management of your digital presence.
-                            </p>
-                        </div>
-                    </div>
-                    <div class="crafting__img">
-                        <img src="https://www.specbee.com/sites/default/files/styles/promo_card_xl/public/2023-06/higher-education-got-you-back.webp?itok=ZMl2xwsn" alt="">
-                    </div>
-                </div>
             </div>
         </div>
 
@@ -217,8 +203,30 @@
             </div>
         </div>
 
-        <div class="standingout">
-            <h2 class="standingout__heading"> STANDING OUT</h2>
+        <div class="ourwork">
+            <h2 class="ourwork__heading">OUR WORK</h2>
+            <div class="ourwork__card">
+                <div class="ourwork__img">
+                    <img src="https://www.specbee.com/sites/default/files/styles/promo_card_xl/public/2023-06/semi.webp?itok=TDbqxNkB" alt="">
+                </div>
+                <div class="ourwork__card__info">
+                    <div class="card__client-logo">
+                        <img src="https://www.specbee.com/sites/default/files/2023-06/semi_logo_0.svg" alt="semi_logo" loading="lazy">
+                    </div>
+                </div>
+                <div class="ourwork__content">
+                    <div class="ourwork__title">
+                        <h3>Multi-Lingual Unified Platform for SEMI</h3>
+                    </div>
+                    <div class="ourwork__footer">
+                        <p>Technology/Non-Profit</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="standingout destandingout">
+            <h2 class="standingout__heading destandingout__heading"> STANDING OUT</h2>
             <div class="standingout__wrapper">
                 <div class="standingout__item">
                     <div class="standingout__img">
@@ -266,6 +274,15 @@
                     </div>
                 </div>
             </div>
+        </div>
+
+        <div class="container descontainer">
+            <div class="container__text__wrapper">
+            <div role="img"> <svg class="container__quote-icon des__container__quote-icon " viewBox="0 0 113 63" fill="#0020f6" xmlns="http://www.w3.org/2000/svg"><path d="M8.22593 31.3316V0.0342193H53.4604V31.3316L14.8277 62.3844L0.401592 55.7826L8.22593 31.3316ZM67.642 0.0342193H112.876V31.3316L74.2438 62.3844L60.0622 55.7826L67.642 31.3316V0.0342193Z"></path></svg></div>
+            <p class="container__description">Specbee's stellar service, deep development expertise, and transparent/regular communications were only overshadowed by their ability to creatively solve problems.</p>
+        </div>
+            <p class="container__name">ERIKA HASKEL</p>
+            <p class="container__pos">PMP Senior Project Manager,Physicians Insurance A Mutual Company</p>
         </div>
 
 
