--- a/designservice.html
+++ b/designservice.html
@@ -7,13 +7,14 @@
             <link rel="shortcut icon" type="image/x-icon" href="logospec.jpg"/>
             <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
             <link rel="stylesheet" href="CSS/main.css">
-            <link rel="stylesheet" href="CSS/banner.css">
+            <!-- <link rel="stylesheet" href="CSS/banner.css">
             <link rel="stylesheet" href="CSS/service.css">
             <link rel="stylesheet" href="CSS/ourwork.css">
             <link rel="stylesheet" href="CSS/container.css">
             <link rel="stylesheet" href="CSS/standing.css">
             <link rel="stylesheet" href="CSS/crafting.css">
             <link rel="stylesheet" href="CSS/ideas.css">
+            <link rel="stylesheet" href="CSS/mixandmatch.css"> -->
             <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     </head>
@@ -149,6 +150,64 @@
                     </div>
                     <div class="crafting__img">
                         <img src="https://www.specbee.com/sites/default/files/styles/promo_card_xl/public/2023-06/higher-education-crafting-smart-solutions.webp?itok=AXJQemx7" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="mixandmatch">
+            <div class="mixandmatch__container">
+                <h3 class="mixandmatch__heading">MIX AND MATCH</h3>
+                <div class="mixandmatch__desc">
+                    <p>Sometimes, all you need is a UX optimization service or maybe just an exploratory research service. You should be able to choose what you need depending on your budget, timeline of design stage! Which is why we give you the flexibility of handpicking the UI/UX design services of your choice. Take a look at all our design services and create your own UI/UX package!</p>
+                </div>
+                <div class="accordion">
+                    <div class="accordion__wrapper">
+                        <div class="accordion__left">
+                            <div class="accordion__item">
+                                <div class="accordion__title">User Experience Research</div>
+                                    <div class="accordion__content">
+                                        <p>We’ve all heard the classic web stories about assuming the audience's needs and preferences. Our UX research services offer a systemized and custom level of analysis to meet your visitor’s specific needs.</p>
+                                        <ol>
+                                            <li><strong>Exploratory research</strong>: Discover the hidden drivers behind your users' behavior and uncover their motivations and pain points with our deep-dive exploratory research service.</li>
+                                            <li><strong>Evaluative Research</strong>: Optimize usability by addressing issues through evaluative research, including usability testing, heuristic evaluations, and A/B testing</li>
+                                            <li><strong>Validation Research</strong>: Refine your design by gathering feedback through validation research, including user testing and targeted feedback on specific design elements.</li>
+                                        </ol>
+                                    </div>
+                                </div>
+                            <div class="accordion__item">
+                                <div class="accordion__title">Information Architecture and Content Design</div>
+                                    <div class="accordion__content">
+                                        <p>Finding it challenging to organize your content in a way that resonates with your users? Our Information Architecture &amp; Content Design service can create site maps, navigation schemes, and content outlines to enhance your product's usability and improve your users' experience.</p>
+                                    </div>
+                            </div>
+                            <div class="accordion__item">
+                                <div class="accordion__title">Interactive Prototyping and Useability testing</div>
+                                    <div class="accordion__content">
+                                        <p>We help you create low or high-fidelity prototypes of your product to gather user feedback and refine the design. By conducting usability and A/B testing, we help you improve your product's usability and user experience.</p>
+                                    </div>
+                            </div>
+                        </div>
+                        <div class="accordion__right">
+                            <div class="accordion__item">
+                                <div class="accordion__title">Visual Design</div>
+                                    <div class="accordion__content">
+                                        <p>Looking to create a strong visual identity that resonates with your target audience? We focus on creating visually appealing and intuitive designs that align with your brand's messaging and values while enhancing the user experience.</p>
+                                    </div>
+                            </div>
+                            <div class="accordion__item">
+                                <div class="accordion__title">Front-End Development and Implementation</div>
+                                    <div class="accordion__content">
+                                        <p>Want to bring your product or service to life? Our team of skilled developers codes your design into a functional and interactive product using web technologies such as HTML, CSS, React and JavaScript, creating a responsive design that works seamlessly on various devices.</p>
+                                    </div>
+                            </div>
+                            <div class="accordion__item">
+                                <div class="accordion__title">UX Optimization</div>
+                                    <div class="accordion__content">
+                                        <p>Are you concerned about slow load times and unreliable performance? We optimize the performance of your product or service by compressing images and other media, optimizing the code, and implementing caching to improve the user experience.</p>
+                                    </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -388,21 +447,21 @@
                     </a></li>
                 </div>
 
-                    <div class="footer__images">
-                        <img class="footer__img" src="https://www.specbee.com/sites/default/files/2022-03/drupal-association-premium.svg">
+                <div class="footer__images">
+                    <a href="#"><img class="footer__img" src="https://www.specbee.com/sites/default/files/2022-03/drupal-association-premium.svg"></a>
 
-                        <img class="footer__img" src="https://www.specbee.com/sites/default/files/2022-03/clutch.svg">
-                        <img class="footer__img" src="https://www.specbee.com/sites/default/files/2022-03/Goodfirms.svg">
-                        <img class="footer__img" src="https://www.specbee.com/sites/default/files/2023-04/Accessibility-Badge.svg"></div>
-                        </div>
+                    <a href="#"><img class="footer__img" src="https://www.specbee.com/sites/default/files/2022-03/clutch.svg"></a>
+                    <a href="#"><img class="footer__img" src="https://www.specbee.com/sites/default/files/2022-03/Goodfirms.svg"></a>
+                    <a href="#"><img class="footer__img" src="https://www.specbee.com/sites/default/files/2023-04/Accessibility-Badge.svg"></a>
+                </div>
                 </div>
             </div>
             </div>
-        </div>
             <div class="footer__copyright">
                 © 2023 Specbee Consulting Services Pvt. Ltd.
             </div>
         </footer>
         <script src="spec.js"></script>
+        <script src="accordian.js"></script>
     </body>
 </html>
