--- a/service.html
+++ b/service.html
@@ -7,11 +7,11 @@
             <link rel="shortcut icon" type="image/x-icon" href="logospec.jpg"/>
             <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
             <link rel="stylesheet" href="CSS/main.css">
-            <link rel="stylesheet" href="CSS/banner.css">
+            <!-- <link rel="stylesheet" href="CSS/banner.css">
             <link rel="stylesheet" href="CSS/service.css">
             <link rel="stylesheet" href="CSS/standing.css">
             <link rel="stylesheet" href="CSS/crafting.css">
-            <link rel="stylesheet" href="CSS/ideas.css">
+            <link rel="stylesheet" href="CSS/ideas.css"> -->
             <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     </head>
@@ -133,36 +133,33 @@
         <h3 class="banner__title-sec">Trusted around the world</h3>
         </div>
 
-        <div class="crafting">
-            <div class="crafting__wrapper">
-                <div class="crafting__item">
-                    <div class="crafting__content">
-                        <div class="crafting__content__title">
-                            <h3>Crafting Smart Solutions for Universities</h3>
+        <div class="service-con">
+            <div class="service-con__wrapper">
+                <div class="service-con__block">
+                    <div class="service-con__content">
+                        <div class="service-con__content__title">
+                            <h3>A DRUPAL DEVELOPMENT COMPANY THAT PUTS YOU FIRST</h3>
                         </div>
-                        <div class="crafting__content__text">
-                            <p>71% of the Top 100 universities and every Ivy league school choose Drupal as their CMS to deliver technology-driven learning methods. Drupal provides flexibility, security and scalability to establish coordination and management across multiple departments.</p>
-                            <p>With Specbee as your Drupal partner, you’ll have an expert team to help you improve engagement with students, faculty, alumni, and prospective students.</p>
+                        <div class="service-con__content__text">
+                            <p>We get it. You need efficient, effective, and tailor-fit solutions to meet your organization's unique needs. Our expertise and client-focused attitude has enabled us to become the preferred Drupal Development partner for businesses around the world. That’s our round-about way of saying people like us.</p>
                         </div>
                     </div>
-                    <div class="crafting__img">
-                        <img src="https://www.specbee.com/sites/default/files/styles/promo_card_xl/public/2023-06/higher-education-crafting-smart-solutions.webp?itok=AXJQemx7" alt="">
+                    <div class="service-con__img">
+                        <img src="https://www.specbee.com/sites/default/files/styles/promo_card_xl/public/2023-06/drupal-development-drupal%20services-to-propel.webp?itok=qG906iT8" alt="">
                     </div>
                 </div>
 
-                <div class="crafting__item">
-                    <div class="crafting__content">
-                        <div class="crafting__content__title">
-                            <h3>WE'VE GOT YOUR BACK</h3>
+                <div class="service-con__block">
+                    <div class="service-con__content">
+                        <div class="service-con__content__title">
+                            <h3>SUPERCHARGE YOUR ONLINE PRESENCE</h3>
                         </div>
-                        <div class="crafting__content__text">
-                            <p>Our Drupal experts can help you manage your university's web presence and implement a content strategy that is compliant with campus-wide standards. With Specbee as your Drupal partner, you’ll have an expert team to help you improve engagement with students, faculty, alumni, and prospective students.</p>
-                            <p>All our major deployments are driven by robust and automated Continuous Integration and Continuous Delivery practices, which allow for fully controlled, secure and precise management of your digital presence.
-                            </p>
+                        <div class="service-con__content__text">
+                            <p>You’ve got goals. We’ve got insanely great Drupal development services. Our team helps enterprises, associations, nonprofits and small businesses increase their revenues, enhance their engagement, and optimize their business processes with unique perspective and creative technical problem solving.</p>
                         </div>
                     </div>
-                    <div class="crafting__img">
-                        <img src="https://www.specbee.com/sites/default/files/styles/promo_card_xl/public/2023-06/higher-education-got-you-back.webp?itok=ZMl2xwsn" alt="">
+                    <div class="service-con__img">
+                        <img src="https://www.specbee.com/sites/default/files/styles/promo_card_xl/public/2023-06/drupal-development-whats-for-you.webp?itok=EX5WaIVW" alt="">
                     </div>
                 </div>
             </div>
@@ -372,12 +369,13 @@
                 </div>
 
                     <div class="footer__images">
-                        <img class="footer__img" src="https://www.specbee.com/sites/default/files/2022-03/drupal-association-premium.svg">
+                        <a href="#"><img class="footer__img" src="https://www.specbee.com/sites/default/files/2022-03/drupal-association-premium.svg"></a>
 
-                        <img class="footer__img" src="https://www.specbee.com/sites/default/files/2022-03/clutch.svg">
-                        <img class="footer__img" src="https://www.specbee.com/sites/default/files/2022-03/Goodfirms.svg">
-                        <img class="footer__img" src="https://www.specbee.com/sites/default/files/2023-04/Accessibility-Badge.svg"></div>
-                        </div>
+                        <a href="#"><img class="footer__img" src="https://www.specbee.com/sites/default/files/2022-03/clutch.svg"></a>
+                        <a href="#"><img class="footer__img" src="https://www.specbee.com/sites/default/files/2022-03/Goodfirms.svg"></a>
+                        <a href="#"><img class="footer__img" src="https://www.specbee.com/sites/default/files/2023-04/Accessibility-Badge.svg"></a>
+                    </div>
+                </div>
                 </div>
             </div>
             </div>
