--- a/homepage.html
+++ b/homepage.html
@@ -6,11 +6,12 @@
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <link rel="shortcut icon" type="image/x-icon" href="logospec.jpg"/>
             <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+            <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
             <link rel="stylesheet" href="CSS/main.css">
-            <link rel="stylesheet" href="CSS/banner.css">
+            <!-- <link rel="stylesheet" href="CSS/banner.css">
             <link rel="stylesheet" href="CSS/container.css">
             <link rel="stylesheet" href="CSS/insights.css">
-            <link rel="stylesheet" href="CSS/ideas.css">
+            <link rel="stylesheet" href="CSS/ideas.css"> -->
             <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
             <link href="https://fonts.cdnfonts.com/css/hanson" rel="stylesheet">
 
@@ -63,7 +64,7 @@
 
                     <ul class="nav-menu">
                         <li class="nav-item">
-                            <a href="service.html" class="nav-link">Drupal Services</a>
+                            <a href="service.html" class="nav-link drupal-link">Drupal Services</a>
                             <div class="hamburger__inner">
                                 <span class="bar1"></span>
                                 <span class="bar1"></span>
@@ -131,6 +132,53 @@
             </div>
         </div>
         <h3 class="banner__title-sec">Trusted around the world</h3>
+        <div class="slider">
+            <ul class="banner-slider">
+                <li>
+                    <img src="https://www.specbee.com/sites/default/files/2023-06/etf_0_1.svg" alt="">
+                </li>
+                <li>
+                    <img src="https://www.specbee.com/sites/default/files/2023-06/curtiss_0_1.svg" alt="">
+                </li>
+                <li>
+                    <img src="https://www.specbee.com/sites/default/files/2023-06/torani.svg" alt="">
+                </li>
+                <li>
+                    <img src="https://www.specbee.com/sites/default/files/2023-06/mjf_0_0.svg" alt="">
+                </li>
+                <li>
+                    <img src="https://www.specbee.com/sites/default/files/2023-06/robins_0_0.svg" alt="">
+                </li>
+                <li>
+                    <img src="https://www.specbee.com/sites/default/files/2023-06/ieee_0_0.svg" alt="">
+                </li>
+                <li>
+                    <img src="https://www.specbee.com/sites/default/files/2023-06/georgia-tech_0_0.svg" alt="">
+                </li>
+                <li>
+                    <img src="https://www.specbee.com/sites/default/files/2023-06/PI_0_1.svg" alt="">
+                </li>
+                <li>
+                    <img src="https://www.specbee.com/sites/default/files/2023-06/stelar.svg" alt="">
+                </li>
+                <li>
+                    <img src="https://www.specbee.com/sites/default/files/2023-06/scce_0_0.svg" alt="">
+                </li>
+                <li>
+                    <img src="https://www.specbee.com/sites/default/files/2023-06/scania_0_0.svg" alt="">
+                </li>
+                <li>
+                    <img src="https://www.specbee.com/sites/default/files/2023-06/larsen-turbo_0_0.svg" alt="">
+                </li>
+                <li>
+                    <img src="https://www.specbee.com/sites/default/files/2023-06/semi_0_0.svg" alt="">
+                </li>
+                <li>
+                    <img src="https://www.specbee.com/sites/default/files/2023-06/scce_0_0.svg" alt="">
+                </li>
+
+            </ul>
+        </div>
         </div>
 
         <div class="container">
@@ -172,6 +220,7 @@
         <div class="ideas__block">
             <p class="ideas__block__text">LET'S DISCUSS YOUR IDEAS.</p>
             <p class="ideas__block__text">WE'D LOVE TO HEAR FROM YOU.</p>
+            <!-- <div class="contact-btn"><a class="contact-link" href="#">Contact Us</a></div> -->
             <div class="ideas__block__btn">
             <button class="ideas__block__btn-link"><a class="ideas__block__btn-text" href="#">CONTACT US</a></button></div>
         </div>
@@ -272,13 +321,13 @@
                     </a></li>
                 </div>
 
-                    <div class="footer__images">
-                        <img class="footer__img" src="https://www.specbee.com/sites/default/files/2022-03/drupal-association-premium.svg">
+                <div class="footer__images">
+                    <a href="#"><img class="footer__img" src="https://www.specbee.com/sites/default/files/2022-03/drupal-association-premium.svg"></a>
 
-                        <img class="footer__img" src="https://www.specbee.com/sites/default/files/2022-03/clutch.svg">
-                        <img class="footer__img" src="https://www.specbee.com/sites/default/files/2022-03/Goodfirms.svg">
-                        <img class="footer__img" src="https://www.specbee.com/sites/default/files/2023-04/Accessibility-Badge.svg"></div>
-                        </div>
+                    <a href="#"><img class="footer__img" src="https://www.specbee.com/sites/default/files/2022-03/clutch.svg"></a>
+                    <a href="#"><img class="footer__img" src="https://www.specbee.com/sites/default/files/2022-03/Goodfirms.svg"></a>
+                    <a href="#"><img class="footer__img" src="https://www.specbee.com/sites/default/files/2023-04/Accessibility-Badge.svg"></a>
+                </div>
                 </div>
             </div>
             </div>
@@ -287,6 +336,9 @@
                 © 2023 Specbee Consulting Services Pvt. Ltd.
             </div>
         </footer>
+        <script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
         <script src="spec.js"></script>
+        <script src="slider.js"></script>
     </body>
 </html>
